--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 		<input type="email" id="email" placeholder="Email" required></input><br>
 
 		<label for="gender_m, gender_f">Gender</label>
-		<input type="radio" id="gender_m" required>Male
-		<input type="radio" id="gender_f" required>Female<br>
+		<input type="radio" id="gender_m" name="gender" value="Male"required>Male
+		<input type="radio" id="gender_f" name="gender" value="Female" required>Female<br>
 
 		<label for="cars">Car Brands</label>
 		<select id="cars"  required>
@@ -44,7 +44,7 @@
 		<input type="password" id="password" placeholder="password" required></input><br>
 
 		<label for="tos">I agree to the TOS</label>
-		<input type="checkbox" id="tod" required></input><br>
+		<input type="checkbox" id="tos" required></input><br>
 
 		<button type="submit" value="Submit">Submit</button>
 	</form>
